--- a/force-app/main/default/classes/ChangePasswordController.cls
+++ b/force-app/main/default/classes/ChangePasswordController.cls
@@ -12,4 +12,6 @@ public with sharing class ChangePasswordController {
     }     
     
    	public ChangePasswordController() {}
+
+    // New stuff
 }
